2001-09-11  Adam Fedor  <fedor@gnu.org>

	* configure.in: Make sure to subst HAVE_PTHREAD_H into config.mak

2001-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCompatibility.m: GSXMLPlMake() unused argument removed.
	* Source/NSData.m: Unused and commented out XML plist code removed.
	* Source/NSString.m: ditto
	* Source/NSArray.m: Generate XML plists only when writing to file
	or to URL, not for the -description... methods.
	This is what MacOS-X does.
	* Source/NSDictionary.m: ditto

2001-09-05  Adam Fedor  <fedor@gnu.org>

	* configure.in: Define BROKEN_NESTED_FUNCTIONS if compiler sucks.
	* Source/NSArray.m (-sortedArrayUsingSelector:): Remove nested
	function.
	([NSMutableArray -sortUsingSelector:]): Likewise.
	* Source/NSConnection.m (-forwardForProxy:selector:argFrame:): 
	Use external encode/decode functions if BROKEN_NESTED_FUNCTIONS.
	(-forwardInvocation:forProxy:): Likewise.
	(-_service_forwardForProxy:): Likewise.
	* Source/mframe.m (mframe_build_return_opts): Remove and
	consolidate nested functions.
	(mframe_handle_return): Likewise.
	
2001-08-31  Adam Fedor  <fedor@gnu.org>

	* Resources/French/Localizable.strings: Update (from
	Michael Scheibler <michael.scheibler@onevision.de>).

Fri Aug 31 11:58:42 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Documentation/gsdoc/NSFunctions.gsdoc: Documented the
	localization functions/macros: NSLocalizedString,
	NSLocalizedStringFromTable, NSLocalizedStringFromTableInBundle,
	NSLocalizedStaticString, _ and __.

2001-08-30  Adam Fedor  <fedor@gnu.org>

	* Tools/sfparse.m: Add code to convert files to Unicode.
	* Resources/German/Localizable.strings: Convert to Unicode.
	* Resources/French/Localizable.strings: Likewise.

Thu Aug 30 20:03:19 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/objc-load.m (objc_load_module): Reset the load callbacks
	to 0 when we abort loading the module because of an error
	(Reported by Michael Scheibler <michael.scheibler@onevision.de>).
